Working on CSS upgrade for HTML

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-
+        <link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
@@ -12,6 +12,7 @@
         <p>Cotizacion del dolar blue: {{ printf "$%.2f" .Blue}}</p>
         <p>Porcentaje de variacion entre oficial y blue: {{ printf "%.2f" .Variacion }}% </p>
         <p>Pericotes ®</p>
+        <img src="https://media.tenor.com/images/ba59f6e55c2db14858c369f925c505a4/tenor.gif" alt="Pericotes">
     </body>
     <script></script>
 </html>
